# transcription-core

./: .gitignore  README.md  pyproject.toml
src/transcription_core/: __init__.py  config.py  exceptions.py  result.py  transcribe.py  whatsapp_media.py
tests/: test_config.py  test_transcribe.py  test_whatsapp_media.py
